--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,9 @@
   max-width: 100%;
 }
 
-.favorites {
+.favorites ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   background-color: rgb(255, 165, 0);
 }
